fix wrapping error in <td nowrap>, re #2563
git-svn-id: svn://develop.studip.de/studip/trunk@23258 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/tooltip.less
+++ b/public/assets/stylesheets/less/tooltip.less
@@ -22,6 +22,7 @@ a.tooltip {
         position: absolute;
         text-shadow: 0 1px 0 rgba(255,255,255,.4);
         visibility: hidden;
+        white-space: normal;
         width: 230px;
         z-index: 999;
 
